[tool.poetry]
name = "Hdl21SchematicImporter"
version = "0.1.0"
description = ""
authors = ["Dan Fritchman <dan@fritch.mn>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "1.9.1"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
black = "22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
